--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Food Dog</title>
+<title>Food-Dog</title>
 <style type="text/css">
 body {
     background-color: #DCC3AC;
